k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finpay
  labels:
    app: finpay
    version: "1.0"
