k8s/04-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: finpay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: finpay/auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: auth-data
              mountPath: /data/auth
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
      volumes:
        - name: auth-data
          persistentVolumeClaim:
            claimName: auth-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: finpay
spec:
  selector:
    app: auth-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
