k8s/07-customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  namespace: finpay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: finpay/customer-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          volumeMounts:
            - name: customer-data
              mountPath: /data/customer
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 10
      volumes:
        - name: customer-data
          persistentVolumeClaim:
            claimName: customer-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: finpay
spec:
  selector:
    app: customer-service
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
