k8s/11-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: finpay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: finpay/notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: finpay
spec:
  selector:
    app: notification-service
  ports:
    - port: 9002
      targetPort: 9002
  type: ClusterIP
