k8s/13-reporting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting-service
  namespace: finpay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting-service
  template:
    metadata:
      labels:
        app: reporting-service
    spec:
      containers:
        - name: reporting-service
          image: finpay/reporting-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9004
          volumeMounts:
            - name: reporting-data
              mountPath: /data
      volumes:
        - name: reporting-data
          persistentVolumeClaim:
            claimName: reporting-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: finpay
spec:
  selector:
    app: reporting-service
  ports:
    - port: 9004
      targetPort: 9004
  type: ClusterIP
